created database models

--- a/GameHubCSharp/appsettings.json
+++ b/GameHubCSharp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GameHubCSharp-071DF9DF-3EB6-4422-91D1-3DDB6918873E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-NVNDLO3\\SQLEXPRESS;Database=GameHubCSharp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
