--- a/GameHubCSharp/appsettings.json
+++ b/GameHubCSharp/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=DESKTOP-1K56OA7;Database=GameHubCSharp;Trusted_Connection=True;MultipleActiveResultSets=true"
-     "DefaultConnection": "Server=DESKTOP-CH3A5EO\\SQLEXPRESS;Database=GameHubCSharp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=DESKTOP-CH3A5EO\\SQLEXPRESS;Database=GameHubCSharp;Trusted_Connection=True;MultipleActiveResultSets=true",//zarko
+    "DefaultConnection": "Server=DESKTOP-NVNDLO3\\SQLEXPRESS;Database=GameHubCSharp;Trusted_Connection=True;MultipleActiveResultSets=true"//July
+
   },
   "Logging": {
     "LogLevel": {
