Move need files

--- a/GameHubCSharp.BL/GameHubCSharp.BL.csproj
+++ b/GameHubCSharp.BL/GameHubCSharp.BL.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -17,6 +17,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GameHubCSharp.DAL\GameHubCSharp.DAL.csproj" />
   </ItemGroup>
 
 </Project>
