--- a/GameHubCSharp/GameHubCSharp.csproj
+++ b/GameHubCSharp/GameHubCSharp.csproj
@@ -7,9 +7,13 @@
 
   <ItemGroup>
     <Compile Remove="Models\**" />
+    <Compile Remove="Services\**" />
     <Content Remove="Models\**" />
+    <Content Remove="Services\**" />
     <EmbeddedResource Remove="Models\**" />
+    <EmbeddedResource Remove="Services\**" />
     <None Remove="Models\**" />
+    <None Remove="Services\**" />
   </ItemGroup>
 
   <ItemGroup>
